# ERL_EAST

./: LICENSE  README.md  index.html
src/: .env  .gitignore
src/EAST/debugging_ros_bag/: CMakeLists.txt  README.md  package.xml  setup.py
src/EAST/debugging_ros_bag/launch/: costmap_sim.launch  examine_lidar3d.launch  examine_ros_bag.launch  examine_ros_bag_all_plots.launch
src/EAST/debugging_ros_bag/plot_config/: governor_status.xml  low_level_controller.xml  safety_metric_and_act_gvn.xml  safety_metric_and_control_signal.xml  safety_metric_and_err_code.xml  safety_metric_and_gvn_status.xml
src/EAST/debugging_ros_bag/rviz/: examine_lidar3d.rviz  examine_ros_bag.rviz  ref_gvn_ros.rviz
src/EAST/debugging_ros_bag/scripts/: jackal_py_vis.py  rosbag_plotter.py
src/EAST/east_demos/: CMakeLists.txt  README.md  package.xml
src/EAST/erl_costmap_ros/: CMakeLists.txt  README.md  package.xml
src/EAST/erl_costmap_ros/include/erl_costmap_ros/: erl_costmap.h  erl_costmap_ros.h
src/EAST/erl_costmap_ros/src/: erl_costmap_ros.cpp
src/EAST/erl_moving_obstacle/launch/: mov_obs_info.launch  mov_obs_info_vicon.launch
src/EAST/erl_unicycle_controller/: CMakeLists.txt  package.xml  setup.py
src/EAST/erl_unicycle_controller/plot_config/: compare_odom_pose2d.xml
src/EAST/erl_unicycle_controller/rviz/: odom_comp_cc_simple_goal.rviz  test_cone_controller_p3d.rviz
src/EAST/erl_unicycle_controller/src/erl_unicycle_controller/: cone_bidirectional_controller.py  cone_controller.py  post.py  pre.py  unicycle_controller_node.py
src/EAST/erl_unicycle_controller/src/erl_unicycle_controller/debug/: const_cmd_vel_node.py  dummy_goal_node.py  dummy_goal_node_debug.py  dummy_path_publisher.py
src/EAST/erl_unicycle_controller/src/erl_unicycle_controller/outdated/: bdirect_unicycle_controller_node.py  reset_enable_odom_tf
src/EAST/grid_map_utils/: CMakeLists.txt  package.xml  setup.py
src/EAST/grid_map_utils/launch/: test_ogm_saver.launch
src/EAST/grid_map_utils/rviz/: test_grid_map.rviz  test_grid_map_pub.rviz
src/EAST/grid_map_utils/src/grid_map_utils/: costmap.py  grid_map_base.py  grid_map_dist.py  grid_map_publisher.py
src/EAST/grid_map_utils/src/grid_map_utils/outdated/: ogm_saver.py  test_costmap_node.py  test_grid_map_base_node.py  test_grid_map_dist_node.py  test_grid_map_pub_node.py  test_ogm_saver_node.py
src/EAST/grid_map_utils/tmp_data/: debug_grid_msg.pkl  debug_ogm_msg.pkl
src/EAST/ref_gvn_core/: CMakeLists.txt  package.xml  setup.py
src/EAST/ref_gvn_core/src/ref_gvn_core/: actlpg_core.py  actlpg_optm.py  core.py  geometry.py  ref_gvn_se2_utils.py
src/EAST/ref_gvn_ros/: CMakeLists.txt  package.xml  setup.py
src/EAST/ref_gvn_ros/data/static_path/: max_clear_path.npz  mid_clear_path.npz  min_clear_path.npz  u_shape_path.npz
src/EAST/ref_gvn_ros/launch/: act_refgvn_virtual_movobs.launch  ref_gvn_cone.launch  robot_act_ref_gvn_vicon.launch  robot_act_ref_gvn_vis.launch  robot_ref_gvn.launch
src/EAST/ref_gvn_ros/launch/cost_curve_compare/known_path/: max_clear_known_path.launch  mid_clear_known_path.launch  min_clear_known_path.launch
src/EAST/ref_gvn_ros/launch/cost_curve_compare/unknown_path/: max_clear.launch  mid_clear.launch  min_clear.launch
src/EAST/ref_gvn_ros/launch/maze_compare/: ref_gvn_cone_maze.launch
src/EAST/ref_gvn_ros/launch/u_shape_sddm_compare/: ushape_sddm_off.launch  ushape_sddm_on.launch
src/EAST/ref_gvn_ros/plot/: cone_controller_debug.xml  governor_status.xml  llc_debug.xml  ref_gvn_sense.xml  safety_metric_and_control_signal.xml
src/EAST/ref_gvn_ros/rviz/: maze.rviz  ref_gvn.rviz  ref_gvn_cone_map_v0.rviz  ref_gvn_dummy.rviz  ref_gvn_icra20.rviz  ref_gvn_sense.rviz  test_laser2pcl.rviz  test_marker.rviz  test_ouster.rviz
src/EAST/ref_gvn_ros/src/ref_gvn_ros/: actlpg_ref_gvn_node.py  post.py  pre.py  ref_gvn_cone_dist_node.py  ref_gvn_node.py
src/EAST/ref_gvn_ros/src/ref_gvn_ros/outdated/: dummy_gvn_button.py  dummy_gvn_node.py  dummy_planner_node.py  laser2point.cpp  pre.py  pre_obs.py  ref_gvn_perception.cpp  ref_gvn_sense_node.py  ref_gvn_sense_node_map.py  ref_gvn_sense_node_pcl.py  scan2pcl_node.py  test_marker.py
src/EAST/ref_gvn_utils/: CMakeLists.txt  package.xml  setup.py
src/EAST/ref_gvn_utils/launch/: click_save_path_to_npy.launch  test_colormap.launch
src/EAST/ref_gvn_utils/rviz/: test_costmap2d.rviz  test_costmap_color.rviz
src/EAST/ref_gvn_utils/src/ref_gvn_utils/: click_save_path_to_npy_node.py  geometry_utils.py  planning_utils.py  ref_gvn_bdcone_dist.py  ref_gvn_cone_dist.py  ref_gvn_cone_vis_utils.py  ref_gvn_cone_vis_utils_cls.py  ros_geometry_utils.py  ros_gvn_cone_dist_util.py  ros_gvn_cone_q_dist_util.py  ros_gvn_marker_utils.py  ros_msg_utils.py  ros_planning_utils.py  static_path_publisher_node.py
src/EAST/ref_gvn_utils/src/ref_gvn_utils/grid_map_utils/: ros_grid_map_utils_base.py
src/EAST/ref_gvn_utils/src/ref_gvn_utils/outdated/: ros_gvn_cone_dist_util.py
src/EAST/ref_gvn_utils/tmp_data/: debug_costmap.pkl  debug_path.npz
src/EAST/stop_now/: CMakeLists.txt  README.md  package.xml  setup.py
src/EAST/stop_now/config/: default.yaml
src/erl_development/erl_astar/: CMakeLists.txt  README.md  package.xml
src/erl_development/erl_astar/include/erl_astar/: astar_nx.h
src/erl_development/erl_astar/include/erl_astar/environments/: planning_2d.h  planning_costmap2d.h
src/erl_development/erl_astar/include/erl_astar/heuristics/: heuristic_l1.h
src/erl_development/erl_astar_ros/: README.md  package.xml
src/erl_development/erl_conversions/: CMakeLists.txt  setup.py
src/erl_development/erl_env/: CMakeLists.txt  README.md
src/erl_development/erl_map/: CMakeLists.txt  README.md  package.xml  setup.py
src/erl_development/erl_map/include/erl_map/: grid_map.h  grid_map_utils.h
src/erl_development/erl_msgs/: README.md
src/erl_jackal/gazebo_p3d_utils/: package.xml
src/erl_jackal/jackal_control/: README.md
src/erl_jackal/jackal_description/: README.md
src/erl_jackal/jackal_gazebo/: README.md
src/erl_jackal/ouster-gazebo-simulation/: README.md
(+31 files in other folders)
