<?xml version="1.0"?>
<package format="2">
  <name>east_demos</name>
  <version>0.0.0</version>
  <description>The package holds demo launch files for EAST project.</description>
  <maintainer email="hw@todo.todo">hw</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
