<?xml version="1.0"?>
<package format="2">
  <name>erl_costmap_ros</name>
  <version>0.0.0</version>
  <description>This package is a wrapper around the ERL costmap implementation enabling ROS functionality.</description>

  <maintainer email="zhichaoli@xx.xx">zhichaoli</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
