<?xml version="1.0"?>
<package format="2">
  <name>ref_gvn_core</name>
  <version>0.0.0</version>
  <description>The ref_gvn_core package</description>
  <maintainer email="hw@todo.todo">hw</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

</package>
